fix: Fix mobile header responsiveness and set z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,6 @@ body {
 /* ------------------------------------------------Header */
 
 header {
-    position: fixed;
     z-index: 1;
     top: 0;
     width: 100%;
@@ -89,6 +88,10 @@ header {
     border-bottom: 11px;
     border-style: solid;
     border-color: #133510;
+}
+
+header .row {
+    margin: 0;
 }
 
 /* ------------------------------------------------Nav */
@@ -149,6 +152,7 @@ header {
 
 .navbar {
     padding: 20px 35px 0 0;
+    z-index: 3;
 }
 
 .navbar-toggler {
@@ -280,7 +284,7 @@ footer {
     background: rgba(0, 0, 0, 0.35);
     border-radius: 20px;
     padding: 30px;
-    margin-top: 120px;
+    margin-bottom: 50px;
 }
 
 .hero-form {
@@ -290,7 +294,6 @@ footer {
     text-align: center;
     border: 2px solid #133510;
     min-height: 200px;
-    margin-top: 80px;
 }
 
 .hero-form input {
@@ -382,7 +385,7 @@ footer {
 /* ------------------------------------------------Plants intro */
 
 .plants-intro-container {
-    margin-top: 150px;
+    margin-top: 30px;
     min-height: 240px;
     padding-bottom: 0;
 }
@@ -491,10 +494,6 @@ footer {
 
 /* ------------------------------------------------Story timeline */
 
-.timeline-container {
-    margin-top: 130px;
-}
-
 .timeline .period {
     border-top: 3px solid #096501;
 }
@@ -577,7 +576,6 @@ footer {
 .map-container {
     width: 90%;
     margin: 0 auto;
-    margin-top: 140px;
     padding: 50px 20px;
     max-width: 1000px;
 }
@@ -816,4 +814,19 @@ footer {
         padding: 5px 20px 30px;
     }
 
+    header {
+        position: fixed;
+    }
+
+    .plants-intro-container {
+        margin-top: 150px;
+    }
+
+    .timeline-container {
+        margin-top: 130px;
+    }
+
+    .map-container {
+        margin-top: 140px;
+    }
 }
